# tomosipo

./: changelog.md  pyproject.toml  setup.py
conda/: meta.yaml
scripts/: test_2d_large_volume.py  test_2d_vs_3d.py
tests/: test_geometry_2d.py  test_operator_2d.py
tomosipo/: Operator.py  __init__.py  astra.py  svg.py  torch_support.py  types.py  utils.py  vector_calc.py
tomosipo/geometry/: det_vec.py  parallel.py  parallel_vec.py  transform.py  volume.py
tomosipo/links/: numpy.py  torch.py
