[project]
name = "tomosipo"
version = "0.1.0"
description = "Add your descriptiouv n here"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "scikit-image>=0.24.0",
  "scipy>=1.14.1",
  "setuptools>=75.4.0",
  "tqdm>=4.67.1",
  "ipykernel>=6.29.5",
  "matplotlib>=3.9.4",
  "seaborn>=0.13.2",
  "simpy>=4.1.1",
  "astra-toolbox>=2.2.0",
  "tomosipo>=0.7.0",
  "ts-algorithms>=0.1.0",
  "ipywidgets>=8.1.7",
  "natsort>=8.4.0",
  "jsonargparse>=4.44.0",
  "tifffile>=2024.9.20",
  "torch>=2.7.1",
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" } # Pin torchvision too
ts-algorithms = { git = "https://github.com/ahendriksen/ts_algorithms.git" }
tomosipo = { git = "https://github.com/ahendriksen/tomosipo" }


